<resources>
    <string name="app_name">CryptoMarket</string>
    <string name="contDesc_coin_icon">Coin Icon</string>
    <string name="coin_symbol">BTC</string>
    <string name="coin_name">Bitcoin</string>
    <string name="coin_change">-1.44</string>
    <string name="coin_price">20015.16</string>
    <string name="balance">Balance</string>
    <string name="_3_39695">3,39695</string>
    <string name="_130_52">=130,52$</string>
    <string name="markets">Markets</string>
    <string name="wallet">Wallet</string>
    <string name="own_capital_btc">Own Capital (BTC)</string>
</resources>