<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp">

    <ImageView
        android:id="@+id/ivCoinIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contDesc_coin_icon"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinSymbol"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/coin_symbol"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCoinIcon"
        app:layout_constraintStart_toEndOf="@+id/ivCoinIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:text="@string/coin_name"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivCoinIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvCoinSymbol" />

    <TextView
        android:id="@+id/tvCoinChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_change"
        app:layout_constraintBottom_toBottomOf="@+id/tvCoinSymbol"
        app:layout_constraintEnd_toStartOf="@+id/tvCoinPrice"
        app:layout_constraintStart_toEndOf="@+id/tvCoinSymbol" />

    <TextView
        android:id="@+id/tvCoinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/coin_price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCoinChange"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>