<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="8dp">

    <ImageView
        android:id="@+id/ivWalletCoinIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/contDesc_coin_icon"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWalletCoinSymbol"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/coin_symbol"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWalletCoinIcon"
        app:layout_constraintStart_toEndOf="@+id/ivWalletCoinIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWalletCoinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:text="@string/coin_name"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivWalletCoinIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvWalletCoinSymbol" />

    <TextView
        android:id="@+id/tvWalletCoinDollarPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_change"
        app:layout_constraintEnd_toEndOf="@+id/tvWalletNumberOfCoin"
        app:layout_constraintStart_toStartOf="@+id/tvWalletNumberOfCoin"
        app:layout_constraintTop_toBottomOf="@+id/tvWalletNumberOfCoin" />

    <TextView
        android:id="@+id/tvWalletNumberOfCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/coin_price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>